fix education mobile view

--- a/sass/pages/_2_3_education.sass
+++ b/sass/pages/_2_3_education.sass
@@ -64,10 +64,10 @@
     .education-section 
         
         div 
-            gap: .5rem
+            gap: 1rem
             
             .education-box
-                max-width: 100%
+                padding: .5rem 2rem
 
                 img
                     width: 2.5rem
